<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduction"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/money"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_over">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <RadioButton android:id="@+id/radio_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/answer_1_a"
                android:textAllCaps="true"/>
            <RadioButton android:id="@+id/radio_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/answer_1_b"
                android:textAllCaps="true"/>
            <RadioButton android:id="@+id/radio_krone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/answer_1_c"
                android:textAllCaps="true"/>
            <RadioButton android:id="@+id/radio_baht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/answer_1_d"
                android:textAllCaps="true"/>
        </RadioGroup>
                <TextView
                    android:id="@+id/response_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="47dp"/>
            </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/question_2"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0dp"
                android:layout_height="0dp">
            </LinearLayout>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/members"
            android:hint="@string/hint"/>

            <TextView
                android:id="@+id/response_2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="47dp" />
            </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/question_3"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/europe"
            android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_centerVertical="true">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox android:id="@+id/norway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/answer_3_a"/>
                <CheckBox android:id="@+id/poland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/answer_3_c"/>
                <CheckBox android:id="@+id/turkey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/answer_3_e"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox android:id="@+id/slovakia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/answer_3_b"/>
                <CheckBox android:id="@+id/switzerland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/answer_3_d"/>
                <CheckBox android:id="@+id/greece"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/answer_3_f"/>
            </LinearLayout>
    </LinearLayout>
            <TextView
                android:id="@+id/response_3"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:textSize="20sp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/question_4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/img_composer4"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_over">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_bach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/answer_4_a" />

                <RadioButton
                    android:id="@+id/radio_mozart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/answer_4_b" />

                <RadioButton
                    android:id="@+id/radio_beethoven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/answer_4_c" />

                <RadioButton
                    android:id="@+id/radio_debussy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/answer_4_d" />
            </RadioGroup>

            <TextView
                android:id="@+id/response_4"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="47dp"
                android:textSize="20sp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp">
            <RadioButton android:id="@+id/flag_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawableEnd="@drawable/flag_1"/>
            <RadioButton android:id="@+id/flag_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawableEnd="@drawable/flag_2"/>
            <RadioButton android:id="@+id/flag_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawableEnd="@drawable/flag_3"/>
            <RadioButton android:id="@+id/flag_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawableEnd="@drawable/flag_4"/>
        </RadioGroup>
            <TextView
                android:id="@+id/response_5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="47dp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_points"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:id="@+id/score_text"/>
           <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:onClick="checkAnswers"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:onClick="onReset"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</ScrollView>